# parsonic

./: CHANGELOG.md  parsonic.cabal
src/Text/: Parsonic.hs
src/Text/Parsonic/: Char.hs
