cabal-version:      2.4
name:               parsonic
version:            0.3.2.0

synopsis: Simple monadic parser combinators.

license: GPL-3.0-or-later
author:             a222red
maintainer:         73256177+a222red@users.noreply.github.com

extra-source-files: CHANGELOG.md

library
    exposed-modules:
        Text.Parsonic
        Text.Parsonic.Char

    other-extensions:
        Safe
        LambdaCase
    
    build-depends:    base ^>=4.15.1.0
    hs-source-dirs:   src
    default-language: Haskell2010
